--- a/blocks/all/all.scss
+++ b/blocks/all/all.scss
@@ -1,14 +1,20 @@
 .header {
-    padding-top: 4.7rem;
+    padding-top: 4rem;
+    padding-bottom: 7.4rem;
 }
 
 .header__navigation {
+    position: relative;
+    left: 1rem;
     display: flex;
     flex-direction: row;
-    gap: 55rem;
+    gap: 50.5rem;
 }
 
 .header__logo {
+    position: relative;
+    top: 0.4rem;
+    flex-shrink: 0;
     width: 2.5rem;
     height: 1.65rem;
 }
@@ -18,9 +24,10 @@
     left: -2.5rem;
     display: flex;
     flex-direction: row;
-    gap: 2.9rem;
+    gap: 1.9rem;
     
-    @include font(400, 1.7rem, 150%);
+    @include font(400, 1.6rem, 150%);
+    
     .header__item:first-child {
         a {
             font-weight: 700;
@@ -28,9 +35,179 @@
     }
     .header__item {
         min-width: 7.2rem;
-        letter-spacing: 0.015rem;
+        letter-spacing: 0rem;
         a {
             color: #BF7506;
         }
     }
+}
+.salutation {
+    padding-bottom: 7rem;
+}
+
+.salutation__container {
+    display: flex;
+    gap: 2.7rem;
+}
+
+.salutation__emoji {
+    width: 21.2rem;
+    height: 24rem;
+}
+
+.salutation__logo {
+    @include font(700, 4.8rem, 125%);
+    letter-spacing: -0.03em;
+    color: #211B12;
+    padding-bottom: 0.8rem;
+}
+
+.salutation__description {
+    @include font(700, 2.4rem, 135%);
+    letter-spacing: -0.027em;
+    color: #211B12;
+    span {
+        color: #BF7506;
+    }
+    }
+
+.salutation__txt {
+    width: 51rem;
+    margin-bottom: 2.4rem;
+}
+
+.salutation__links {
+    display: flex;
+    width: 47rem;
+    gap: 14.5rem;
+    a {
+        @include font(700, 2.4rem, 135%);
+    color: #211B12;
+    img {
+        width: 4rem;
+        height: 4rem;
+    }
+    }
+    .salutation__link:last-child {
+        @include font(700, 1.6rem, 150%);
+        color: #211B12;
+        padding: 0rem 0.8rem 0rem 1.5rem;
+        border-bottom: 3px solid #BF7506;
+        img {
+            width: 1rem;
+            margin-right: 1rem;
+        }
+    }
+}
+
+.salutation__link {
+    display: flex;
+    align-items: center;
+}
+
+.project {
+    padding-bottom: 12rem;
+}
+
+.project__container {
+    h2 {
+        @include font(700, 4.8rem, 125%);
+        letter-spacing: -0.037em;
+        color: #BF7506;
+        margin-bottom: 3rem;
+    }
+    
+}
+
+.project__item {
+    display: flex;
+    flex-direction: column;
+    width: 40rem;
+    border-radius: 0.8rem;
+}
+
+.project__txt {
+    padding-left: 1.6rem;
+    h3 {
+        @include font(700, 2.4rem, 135%);
+    letter-spacing: -0.02em;
+    color: #BF7506;
+    padding-bottom: 0.8rem;
+    }
+    p {
+        @include font(400, 1.6rem, 150%);
+        color: #211B12;
+        padding-bottom: 1.7rem;
+        padding-right: 1.6rem;
+
+    }
+}
+
+.project__list {
+    display: flex;
+    gap: 0.4rem;
+    padding-bottom: 1.6rem;
+    li {
+        padding: 0.5rem 0.8rem 0.4rem;
+        border: 1px solid #DD9C3C;
+        border-radius: .4rem;
+        @include font(400, 1.2rem, 150%);
+        color: #211B12;
+    }
+}
+
+.project__img {
+    width: 100%;
+    height: 30rem;
+    
+    margin-bottom: 1.6rem;
+    border-radius: 0.8rem;
+    img {
+        border-radius: 0.8rem;
+    }
+} 
+
+.project__links {
+    display: flex;
+    gap: 2.5rem;
+    
+    @include font(700, 1.6rem, 150%);
+    color: #211B12;
+    a {
+        display: flex;
+        align-items:center;
+        border-bottom: 2px solid #BF7506;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+        padding-bottom: 0.7rem;
+        &:first-child {
+            img {
+                width: 2rem;
+                height: 1.2rem;
+                padding-right: 0.6rem;
+            }
+        }
+        &:last-child {
+            img {
+                width: 2.4rem;
+                height: 1.9rem;
+                padding-right: 0.6rem;
+            }
+        }
+    }
+}
+
+.swiper-button-next:after {
+    position: relative;
+    color:#211B12;
+    z-index: 200;
+    top: 32rem;
+    right: 10rem;
+} 
+.swiper-button-prev:after {
+    position: relative;
+    color:#211B12;
+    z-index: 200;
+    top: 32rem;
+    left: 10rem;
 }
