--- a/blocks/set.scss
+++ b/blocks/set.scss
@@ -13,7 +13,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-size: 0.69445vw;
+  font-size: 0.78125vw;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -87,6 +87,10 @@ img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+a {
+  color: inherit;
 }
 
 .container {
