--- a/blocks/all/all.scss
+++ b/blocks/all/all.scss
@@ -143,7 +143,7 @@
     }
 }
 
-.project__list {
+.project__list, .tags {
     display: flex;
     gap: 0.4rem;
     padding-bottom: 1.6rem;
@@ -210,4 +210,134 @@
     z-index: 200;
     top: 32rem;
     left: 10rem;
+}
+
+.developer {
+    padding-bottom: 12rem;
+}
+
+.developer__container {
+    display: flex;
+    gap: 5.6rem;
+    padding-bottom: 4rem;
+}
+
+.developer__img {
+    flex-shrink: 0;
+    img {
+        border-radius: 2rem;
+        width: 36rem;
+        height: 100%;
+    }
+}
+.developer__text {
+    align-self: center;
+    
+}
+
+.developer__hello {
+    padding-bottom: 0.4rem;
+    @include font(400, 2.4rem, 135%);
+    letter-spacing: -0.02em;
+    color: #211B12;
+}
+
+.developer__title {
+    padding-bottom: 1.6rem;
+    @include font(700, 3.2rem, 125%);
+    letter-spacing: -0.03em;
+    color: #BF7506;
+}
+
+.developer__txt {
+    @include font(400, 1.6rem, 150%);
+    color: #211B12;
+    padding-bottom: 1.6rem;
+
+}
+
+.developer__logo {
+    @include font(400, 2.4rem, 150%);
+    color: #DD9C3C;
+    padding-bottom: 1.6rem;
+}
+
+.developer__signature {
+    height: 15rem;
+    position: relative;
+    left: -13rem;
+}
+
+.developer__description {
+    p {
+        @include font(700, 2.4rem, 135%);
+        letter-spacing: -0.02em;
+        color: #211B12;
+        padding-bottom: 1.3rem;
+
+    }
+}
+
+
+.feedback {
+    padding-bottom: 16rem;
+}
+
+.feedback__title {
+    padding-bottom: 1.6rem;
+    @include font(700, 3.4rem, 125%);
+    letter-spacing: -0.03em;
+    color: #211B12;
+}
+
+.input-block {
+    position: relative;
+    padding-top: 0.9rem;
+    padding-bottom: 2.4rem;
+}
+
+.form__label {
+    position: absolute;
+    top: 0;
+    left: 1.6rem;
+    @include font(400, 1.6rem, 150%);
+    color: #83807C;
+    padding: 0 0.8rem;
+    background: #FFFFFF;
+
+}
+
+.input {
+    border: 0.3rem solid #E0DEDC;
+    border-radius: 0.4rem;
+    width: 43.5rem;
+    height: 5.6rem;
+    
+}
+
+.textarea {
+    min-height: 13rem;
+}
+
+.feedback__container {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 0);
+}
+
+.feedback__button {
+    position: relative;
+    left: 30rem;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    @include font(700, 1.6rem, 150%);
+    color: #211B12;
+    padding: 0rem 0.8rem 1rem 1rem;
+    border-bottom: 0.2rem solid #BF7506;
+    img {
+            width: 2.1rem;
+            margin-right: 0.5rem;
+        }
 }
