--- a/blocks/all/all.scss
+++ b/blocks/all/all.scss
@@ -321,12 +321,11 @@
 
 .feedback__container {
     position: relative;
-    top: 0;
-    left: 0;
-    transform: translate(25%, 0);
+    left: 20rem;
 }
 
 .feedback__button {
+    max-width: 13.5rem;
     position: relative;
     left: 30rem;
     display: flex;
@@ -340,4 +339,20 @@
             width: 2.1rem;
             margin-right: 0.5rem;
         }
+}
+.feedback {
+    position: relative;
+    
+}
+.feedback__hand {
+    position: absolute;
+    width: 30%;
+    right: 0rem;
+}
+
+
+.footer-txt {
+    @include font(400, 1.6rem, 150%);
+    text-align: center;
+    color: #83807C;
 }
